--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -69,11 +69,15 @@ dependencies {
     implementation "com.github.skydoves:colorpicker-compose:1.0.0"
     implementation "me.saket.swipe:swipe:1.0.0"
     implementation "com.github.tehras:charts:0.2.4-alpha"
+
+
+
+
+
     implementation "io.github.serpro69:kotlin-faker:1.13.0"
     implementation "com.google.accompanist:accompanist-pager:0.29.1-alpha"
     implementation 'io.sentry:sentry-android:6.13.1'
     implementation 'io.sentry:sentry-compose-android:6.13.1'
-
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
